--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 section#hero {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-image: url("https://images.unsplash.com/photo-1505682750263-f3f9e519c565?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-repeat: no-repeat;
   background-size: cover;
@@ -70,13 +70,16 @@ header {
   justify-content: center;
   color: yellow;
   margin: 10px;
+  padding: 50px;
 }
 #bottom {
   text-align: left;
-  padding: 0 100px;
+  padding: 0 60px;
+  padding-top: 70px;
   color: white;
   justify-content: space-between;
   display: flex;
+  align-self: flex-end;
 }
 
 .bottom p {
