--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 section#hero {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-image: url("https://images.unsplash.com/photo-1505682750263-f3f9e519c565?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-repeat: no-repeat;
   background-size: cover;
@@ -79,7 +79,7 @@ header {
   color: white;
   justify-content: space-between;
   display: flex;
-  align-self: flex-end;
+  line-height: 20px;
 }
 
 .bottom p {
@@ -380,12 +380,14 @@ section#outline p {
 div .count {
   width: 100%;
   height: 70%;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
 div.count img {
-  width: 40%;
+  width: 85%;
   height: 40%;
 }
 div .count p {
