--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ header {
   justify-content: space-between;
   display: flex;
   line-height: 20px;
+  padding-bottom: 40px;
 }
 
 .bottom p {
@@ -599,10 +600,11 @@ section#footer-items {
     justify-content: center;
   }
   div.count {
-    width: 100%;
+    width: 90%;
     justify-content: center;
     align-items: center;
     text-align: center;
+    flex-direction: column;
   }
 
   .image-container {
